# hello-lights

./: CMakeLists.txt  README.md
assets/shaders/: cube.frag  cube.vert  light.frag
src/: camera.cpp  camera.hpp  main.cpp  model.cpp  model.hpp  shader.cpp  shader.hpp  utility.cpp  utility.hpp
